--- a/index.html
+++ b/index.html
@@ -1,58 +1,40 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+---
+layout: default
+---
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+<h3>Welcome to DongInn's GitHub Pages.</h3>
 
-    <title>IU Parfunc - research group website by iu-parfunc</title>
-  </head>
+<p>I am working for the Center for Research in Extreme Scale Technologies (<a
+    href="http://www.crest.iu.edu/">CREST</a>) as a System Administrator at the
+  <a href="http://www.cs.indiana.edu/">Computer Science Department</a> of <a
+  href="http://www.iub.edu/">Indiana University-Bloomington</a> and also
+working on the Open Source
+Cluster Application Resources (<a
+href="http://oscar.openclustergroup.org/">OSCAR</a>) and Coordinated Infrastructure for Fault Tolerant Systems (<a
+href="http://www.mcs.anl.gov/research/cifts/">CIFTS</a>) project as a core
+developer. My research interests include software engineering and clustering
+computing. Several years ago I worked with PS3 to install OSCAR on several PS3
+machines.</p>
 
-  <body>
+<p>This website consists of my personal blog and notes that I want to keep
+  somewhere for the future. The blog and note pages will be to talk about
+OSCAR, linux, Apple, sysadmin, and anything fun.</p> 
 
-    <header>
-      <div class="container">
-        <h1>IU Parfunc - research group website</h1>
-        <h2>Functional and deterministic parallel programming</h2>
+<b>Contact</b>
+<ul>
+  <li>Tel : 812-856-1369</li>
+  <li>Email : dikim @ indiana . edu</li>
+  <li>Office : C228 (sometimes, LH 135)</li>
+  <li><a href="http://www.crest.iu.edu/~dikim/dikim_public_key.asc">PGP Public key</a> ( <a href="http://pgp.mit.edu:11371/pks/lookup?search=dikim%40indiana.edu&op=vindex&fingerprint=on">for my full pubic key index on the PGP server</a> )</li>
+  <li>IRC channel: #oscar-cluster, #sisuite, #389, #bcfg2, and #perceus on irc.freenode.net</li>
+</ul>
 
-        <section id="downloads">
-          <a href="https://github.com/iu-parfunc" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
-
-    <div class="container">
-      <section id="main_content">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    
-  </body>
-</html>
+<pre>
+  (list->string                                                     
+     (map integer->char                                                
+        (map (lambda (n) (+ (* (remainder n 16) 16) (quotient n 16)))
+           '(68 246 230 118 148 230 230 2 180 150                  
+             214 2 195 70 150 182 150 214 4 150                    
+             230 70 150 22 230 22 226 86 70 87 227))))')))
+</pre>
+If you would like to know how to get the above magic numbers, try <a href="http://www.crest.iu.edu/~dikim/hint.html">this</a>. 
