[3] Add the weather underground sticker

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h3>Welcome to DongInn's GitHub Pages.</h3>
+<h3>Welcome to DongInn's Notes.</h3>
 
 <p>I am working for the Center for Research in Extreme Scale Technologies (<a
     href="http://www.crest.iu.edu/">CREST</a>) as a System Administrator at the
