Yeah. Built from subdir

--- a/publications/index.html
+++ b/publications/index.html
@@ -1,7 +1,140 @@
----
-title: Publications
-layout: publications
----
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <!--
+    <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/print.css" media="print">
+    -->
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
+    <link rel="stylesheet" type="text/css" href="/css/main.css" media="screen">
+
+    <title>DongInn's Notes</title>
+  </head>
+
+  <body>
+
+    <header>
+      <div id="header">
+        <div id="header-title">
+          <h1>DongInn's Notes</h1>
+          <h2>./configure</h2>
+                  <ul class="blue">
+            <li><a href="/" title="home" class="" ><span>Home</span></a></li>
+            <li><a href="/configure" title="configure" class="" ><span>Configure</span></a></li>
+            <li><a href="/blog" title="blog" class="" ><span>Blog</span></a></li>
+            <!--
+            <li><a href="/contact" title="contact" class="" ><span>Contact</span></a></li>
+            -->
+            <li><a href="/publications" title="contact" class="current" ><span>Publications</span></a></li>
+        </ul>
 
 
-{% bibtex _plugins/style.bst publications/dikim.bib %}
+        </div>
+        <div id="header-img">
+          <!--<img class="avatar" src="https://avatars1.githubusercontent.com/dikim33?v=3&s=180" alt="dikim33" width="180" height="180" />-->
+          <img src="/images/Avatar.png" width="180">
+        </div>
+
+        <!--
+        <section id="downloads">
+          <a href="https://github.com/dikim33" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+        -->
+      </div>
+    </header>
+    <div class="container">
+      <section id="main_content">
+
+<h1> Publications </h1>
+
+<dl>
+
+<dt>
+<a name="dikim08:oscar_presentation">&nbsp;</a>
+</dt>
+<dd>
+<b>OSCAR 5.1 on PlayStation 3</b>, DongInn Kim.
+ Presentation at Supuer Computing Conference (SC 2007), Reno, Nevada,
+  October 2007.
+[&nbsp;<a href="dikim_bib.html#dikim08:oscar_presentation">bib</a>&nbsp;| 
+<a href="http://sc07.supercomputing.org/">http</a>&nbsp;| 
+<a href="pdf/OSCAR_on_PS3.pdf">.pdf</a>&nbsp;]
+
+</dd>
+
+
+<dt>
+<a name="kim:oda:oscar06">&nbsp;</a>
+</dt>
+<dd>
+<b>The Introduction of the OSCAR Database API (ODA)</b>.
+ DongInn Kim, Jeffrey&nbsp;M. Squyres, and Andrew Lumsdaine.
+ In <em>Proceedings of the 20th International Symposium on
+  High-Performance Computing in an Advanced Collaborative Environment
+  (HPCS'06)</em>, page&nbsp;39. IEEE Computer Society, May&nbsp;14-17 2006.
+ Session track: 4th Annual OSCAR Symposium (OSCAR'06).
+[&nbsp;<a href="dikim_bib.html#kim:oda:oscar06">bib</a>&nbsp;| 
+<a href="http://www.csm.ornl.gov/oscar06/">http</a>&nbsp;| 
+<a href="pdf/kim-oda-oscar06.pdf">.pdf</a>&nbsp;]
+
+</dd>
+
+
+<dt>
+<a name="kim05:_revam_oscar">&nbsp;</a>
+</dt>
+<dd>
+<b>Revamping the OSCAR database: A Flexible Approach to Cluster
+  Configuration Data Management</b>.
+ DongInn Kim, Jeffrey&nbsp;M. Squyres, and Andrew Lumsdaine.
+ In Ilias Kotsireas and Deborah Stacey, editors, <em>19th
+  International Symposium on High Performance Computing Systems and
+  Applications</em>, pages 326--332, Guelph, Ontario, Canada, May 2005. IEEE
+  Computer Society.
+[&nbsp;<a href="dikim_bib.html#kim05:_revam_oscar">bib</a>&nbsp;| 
+<a href="http://www.csm.ornl.gov/oscar05/">http</a>&nbsp;| 
+<a href="pdf/kim05-_revam_oscar.pdf">.pdf</a>&nbsp;]
+
+</dd>
+</dl>
+
+
+<script>
+var bqs = document.getElementsByTagName("blockquote");
+for(var i = 0; i < bqs.length; i++) {
+  bqs[i].style.display = "none";
+  var ab = document.createElement('a');
+  ab.setAttribute('href', '#');
+  ab.setAttribute('onClick', 'toggleBq('+i+'); return false;');
+  ab.appendChild(document.createTextNode("[abstract]"));
+  bqs[i].parentNode.insertBefore(ab,bqs[i]);
+}
+function toggleBq(i) {
+  if (bqs[i].style.display == "none")  
+    bqs[i].style.display = "block";
+  else
+    bqs[i].style.display = "none";
+}
+</script>
+
+
+
+      </section>
+      <footer>
+        <div id="footer">
+        <table>
+          <tr>
+            <td><span style="display: block !important; width: 300px; text-align: left; font-family: sans-serif; font-size: 12px;"><a href="http://www.wunderground.com/cgi-bin/findweather/getForecast?query=zmw:47401.1.99999&bannertypeclick=wu_clean2day" title="Bloomington, Indiana Weather Forecast" target="_blank"><img src="http://weathersticker.wunderground.com/weathersticker/cgi-bin/banner/ban/wxBanner?bannertype=wu_clean2day_cond&airportcode=KBMG&ForcedCity=Bloomington&ForcedState=IN&zip=47401&language=EN" alt="Find more about Weather in Bloomington, IN" width="200" /></a><br><a href="http://www.wunderground.com/cgi-bin/findweather/getForecast?query=zmw:47401.1.99999&bannertypeclick=wu_clean2day" title="Get latest Weather Forecast updates" style="font-family: sans-serif; font-size: 12px" target="_blank">Click for weather forecast</a></span></td>
+            <td style="text-align:right">Today: 2017-03-11</td>
+          </tr>
+        </table>
+      </div>
+      </footer>
+    </div>
+  </body>
+</html>
