--- a/configure.html
+++ b/configure.html
@@ -1,5 +1,69 @@
----
-layout: default
----
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <!--
+    <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/print.css" media="print">
+    -->
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
+    <link rel="stylesheet" type="text/css" href="/css/main.css" media="screen">
+
+    <title>DongInn's Notes</title>
+  </head>
+
+  <body>
+
+    <header>
+      <div id="header">
+        <div id="header-title">
+          <h1>DongInn's Notes</h1>
+          <h2>./configure</h2>
+                  <ul class="blue">
+            <li><a href="/" title="home" class="" ><span>Home</span></a></li>
+            <li><a href="/configure" title="configure" class="current" ><span>Configure</span></a></li>
+            <li><a href="/blog" title="blog" class="" ><span>Blog</span></a></li>
+            <!--
+            <li><a href="/contact" title="contact" class="" ><span>Contact</span></a></li>
+            -->
+            <li><a href="/publications" title="contact" class="" ><span>Publications</span></a></li>
+        </ul>
+
+
+        </div>
+        <div id="header-img">
+          <!--<img class="avatar" src="https://avatars1.githubusercontent.com/dikim33?v=3&s=180" alt="dikim33" width="180" height="180" />-->
+          <img src="/images/Avatar.png" width="180">
+        </div>
+
+        <!--
+        <section id="downloads">
+          <a href="https://github.com/dikim33" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+        -->
+      </div>
+    </header>
+    <div class="container">
+      <section id="main_content">
 
 <h1>Configure</h1>
+
+
+      </section>
+      <footer>
+        <div id="footer">
+        <table>
+          <tr>
+            <td><span style="display: block !important; width: 300px; text-align: left; font-family: sans-serif; font-size: 12px;"><a href="http://www.wunderground.com/cgi-bin/findweather/getForecast?query=zmw:47401.1.99999&bannertypeclick=wu_clean2day" title="Bloomington, Indiana Weather Forecast" target="_blank"><img src="http://weathersticker.wunderground.com/weathersticker/cgi-bin/banner/ban/wxBanner?bannertype=wu_clean2day_cond&airportcode=KBMG&ForcedCity=Bloomington&ForcedState=IN&zip=47401&language=EN" alt="Find more about Weather in Bloomington, IN" width="200" /></a><br><a href="http://www.wunderground.com/cgi-bin/findweather/getForecast?query=zmw:47401.1.99999&bannertypeclick=wu_clean2day" title="Get latest Weather Forecast updates" style="font-family: sans-serif; font-size: 12px" target="_blank">Click for weather forecast</a></span></td>
+            <td style="text-align:right">Today: 2017-03-11</td>
+          </tr>
+        </table>
+      </div>
+      </footer>
+    </div>
+  </body>
+</html>
