Remove my picture and phone number

--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@ OSCAR, linux, Apple, sysadmin, and anything fun.</p>
 
 <b>Contact</b>
 <ul>
-  <li>Tel : 812-856-1369</li>
   <li>Email : dikim @ indiana . edu</li>
-  <li>Office : C228 (sometimes, LH 135)</li>
-  <li><a href="http://www.crest.iu.edu/~dikim/dikim_public_key.asc">PGP Public key</a> ( <a href="http://pgp.mit.edu:11371/pks/lookup?search=dikim%40indiana.edu&op=vindex&fingerprint=on">for my full pubic key index on the PGP server</a> )</li>
+  <li><a href="http://homes.soic.indiana.edu/dikim/dikim_public_key.asc">PGP Public key</a> ( <a href="http://pgp.mit.edu:11371/pks/lookup?search=dikim%40indiana.edu&op=vindex&fingerprint=on">for my full pubic key index on the PGP server</a> )</li>
   <li>IRC channel: #oscar-cluster, #sisuite, #389, #bcfg2, and #perceus on irc.freenode.net</li>
 </ul>
 
@@ -37,4 +35,4 @@ OSCAR, linux, Apple, sysadmin, and anything fun.</p>
            214 2 195 70 150 182 150 214 4 150                    
            230 70 150 22 230 22 226 86 70 87 227))))')))
 </pre>
-If you would like to know how to get the above magic numbers, try <a href="http://www.crest.iu.edu/~dikim/hint.html">this</a>. 
+If you would like to know how to get the above magic numbers, try <a href="http://homes.soic.indiana.edu/dikim/hint.html">this</a>. 
