Update the layout

--- a/index.html
+++ b/index.html
@@ -35,10 +35,6 @@
 
 
         </div>
-        <div id="header-img">
-          <!--<img class="avatar" src="https://avatars1.githubusercontent.com/dikim33?v=3&s=180" alt="dikim33" width="180" height="180" />-->
-          <img src="/images/Avatar.png" width="180">
-        </div>
 
         <!--
         <section id="downloads">
@@ -70,10 +66,8 @@ OSCAR, linux, Apple, sysadmin, and anything fun.</p>
 
 <b>Contact</b>
 <ul>
-  <li>Tel : 812-856-1369</li>
   <li>Email : dikim @ indiana . edu</li>
-  <li>Office : C228 (sometimes, LH 135)</li>
-  <li><a href="http://www.crest.iu.edu/~dikim/dikim_public_key.asc">PGP Public key</a> ( <a href="http://pgp.mit.edu:11371/pks/lookup?search=dikim%40indiana.edu&op=vindex&fingerprint=on">for my full pubic key index on the PGP server</a> )</li>
+  <li><a href="http://homes.soic.indiana.edu/dikim/dikim_public_key.asc">PGP Public key</a> ( <a href="http://pgp.mit.edu:11371/pks/lookup?search=dikim%40indiana.edu&op=vindex&fingerprint=on">for my full pubic key index on the PGP server</a> )</li>
   <li>IRC channel: #oscar-cluster, #sisuite, #389, #bcfg2, and #perceus on irc.freenode.net</li>
 </ul>
 
@@ -85,7 +79,7 @@ OSCAR, linux, Apple, sysadmin, and anything fun.</p>
            214 2 195 70 150 182 150 214 4 150                    
            230 70 150 22 230 22 226 86 70 87 227))))')))
 </pre>
-If you would like to know how to get the above magic numbers, try <a href="http://www.crest.iu.edu/~dikim/hint.html">this</a>. 
+If you would like to know how to get the above magic numbers, try <a href="http://homes.soic.indiana.edu/dikim/hint.html">this</a>. 
 
 
       </section>
@@ -94,7 +88,7 @@ If you would like to know how to get the above magic numbers, try <a href="http:
         <table>
           <tr>
             <td><span style="display: block !important; width: 300px; text-align: left; font-family: sans-serif; font-size: 12px;"><a href="http://www.wunderground.com/cgi-bin/findweather/getForecast?query=zmw:47401.1.99999&bannertypeclick=wu_clean2day" title="Bloomington, Indiana Weather Forecast" target="_blank"><img src="http://weathersticker.wunderground.com/weathersticker/cgi-bin/banner/ban/wxBanner?bannertype=wu_clean2day_cond&airportcode=KBMG&ForcedCity=Bloomington&ForcedState=IN&zip=47401&language=EN" alt="Find more about Weather in Bloomington, IN" width="200" /></a><br><a href="http://www.wunderground.com/cgi-bin/findweather/getForecast?query=zmw:47401.1.99999&bannertypeclick=wu_clean2day" title="Get latest Weather Forecast updates" style="font-family: sans-serif; font-size: 12px" target="_blank">Click for weather forecast</a></span></td>
-            <td style="text-align:right">Today: 2017-03-11</td>
+            <td style="text-align:right">Today: 2017-03-12</td>
           </tr>
         </table>
       </div>
